@@ -86,6 +86,8 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 
 	public final static List<Environmental>	empty	= new ReadOnlyVector<Environmental>(1);
 
+	public static final Map<String,Filterer<Environmental>> generalItemFilterer = new Hashtable<String,Filterer<Environmental>>();
+
 	@Override
 	public String toEnglishStringList(final String[] V, final boolean andOr)
 	{
@@ -1787,7 +1789,8 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 		final Map<String,int[]> prevFound = new HashMap<String,int[]>();
 		for(final Environmental E : list)
 		{
-			if((filter!=null)&&(!filter.passesFilter(E)))
+			if((filter!=null)
+			&&(!filter.passesFilter(E)))
 			{
 				flist.add("");
 				continue;
@@ -2473,6 +2476,60 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 		return null;
 	}
 
+	protected Filterer<Environmental> getGeneralItemFilter(final String upperSimpleSrchStr)
+	{
+		if (generalItemFilterer.size() == 0)
+		{
+			generalItemFilterer.put("ARMOR", new Filterer<Environmental>() {
+				@Override
+				public boolean passesFilter(final Environmental obj)
+				{
+					return obj.name().equalsIgnoreCase("armor")
+							|| obj.name().equalsIgnoreCase("armors")
+							|| (obj instanceof Armor);
+				}
+			});
+			generalItemFilterer.put("ARMORS", generalItemFilterer.get("ARMOR"));
+			generalItemFilterer.put("WEAPON", new Filterer<Environmental>() {
+				@Override
+				public boolean passesFilter(final Environmental obj)
+				{
+					return obj.name().equalsIgnoreCase("weapon")
+							|| obj.name().equalsIgnoreCase("weapons")
+							|| (obj instanceof Weapon);
+				}
+			});
+			generalItemFilterer.put("WEAPONS", generalItemFilterer.get("WEAPON"));
+			generalItemFilterer.put("COIN", new Filterer<Environmental>() {
+				@Override
+				public boolean passesFilter(final Environmental obj)
+				{
+					return obj.name().equalsIgnoreCase("coin")
+							|| obj.name().equalsIgnoreCase("coins")
+							|| obj.name().equalsIgnoreCase("currency")
+							|| obj.name().equalsIgnoreCase("currencies")
+							|| obj.name().equalsIgnoreCase("money")
+							|| (obj instanceof Coins);
+				}
+			});
+			generalItemFilterer.put("COINS", generalItemFilterer.get("COIN"));
+			generalItemFilterer.put("CURRENCY", generalItemFilterer.get("COIN"));
+			generalItemFilterer.put("CURRENCIES", generalItemFilterer.get("COIN"));
+			generalItemFilterer.put("MONEY", generalItemFilterer.get("COIN"));
+			generalItemFilterer.put("ITEM", new Filterer<Environmental>() {
+				@Override
+				public boolean passesFilter(final Environmental obj)
+				{
+					return obj.name().equalsIgnoreCase("item")
+							|| obj.name().equalsIgnoreCase("items")
+							|| (obj instanceof Item);
+				}
+			});
+			generalItemFilterer.put("ITEMS", generalItemFilterer.get("ITEM"));
+		}
+		return generalItemFilterer.get(upperSimpleSrchStr);
+	}
+
 	@Override
 	public List<Container> parsePossibleContainers(final MOB mob, final List<String> commands, final Filterer<Environmental> filter, final boolean withContentOnly)
 	{
@@ -2869,6 +2926,7 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 		public String	srchStr;
 		public int		occurrance;
 		public boolean	allFlag;
+		public Filterer<Environmental> filter = null;
 
 		public FetchFlags(final String ss, final int oc, final boolean af)
 		{
@@ -2878,7 +2936,31 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 		}
 	}
 
-	public FetchFlags fetchFlags(String srchStr)
+	protected FetchFlags fetchFlags(final String srchStr, final Filterer<Environmental> filter)
+	{
+		final FetchFlags flags = fetchFlags(srchStr);
+		if(flags == null)
+			return null;
+		flags.filter = filter;
+		if(filter != null)
+		{
+			final Filterer<Environmental> xtraFilter = getGeneralItemFilter(flags.srchStr);
+			if(xtraFilter != null)
+			{
+				flags.filter = new Filterer<Environmental>() {
+					@Override
+					public boolean passesFilter(final Environmental obj)
+					{
+						return filter.passesFilter(obj) && xtraFilter.passesFilter(obj);
+					}
+				};
+				flags.srchStr = "";
+			}
+		}
+		return flags;
+	}
+
+	protected FetchFlags fetchFlags(String srchStr)
 	{
 		if(srchStr.length()==0)
 			return null;
@@ -3403,7 +3485,7 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 	{
 		if(list.isEmpty())
 			return null;
-		final FetchFlags flags=fetchFlags(srchStr);
+		final FetchFlags flags=fetchFlags(srchStr, filter);
 		if(flags==null)
 			return null;
 
@@ -3420,8 +3502,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					if(I==null)
 						continue;
 					if((I.container()==goodLocation)
-					&&(filter.passesFilter(I))
-					&&(I.ID().equalsIgnoreCase(srchStr)
+					&&(flags.filter.passesFilter(I))
+					&&((srchStr.length()==0)
+					  ||I.ID().equalsIgnoreCase(srchStr)
 					  ||(I.Name().equalsIgnoreCase(srchStr))
 					  ||(I.name().equalsIgnoreCase(srchStr))))
 					{
@@ -3446,8 +3529,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 				{
 					if((I!=null)
 					&&(I.container()==goodLocation)
-					&&(filter.passesFilter(I))
-					&&(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr))
+					&&(flags.filter.passesFilter(I))
+					&&((srchStr.length()==0)
+					   ||(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr)))
 					&&((!allFlag)
 						||((I.displayText()!=null)&&(I.displayText().length()>0))))
 					{
@@ -3467,8 +3551,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					{
 						if((I!=null)
 						&&(I.container()==goodLocation)
-						&&(filter.passesFilter(I))
-						&&(containsString(I.displayText(),srchStr)))
+						&&(flags.filter.passesFilter(I))
+						&&((srchStr.length()==0)
+						  ||(containsString(I.displayText(),srchStr))))
 						{
 							if((--myOccurrance)<=0)
 								return I;
@@ -3489,7 +3574,7 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 		final Vector<Item> matches=new Vector<Item>(1); // return value
 		if(list.isEmpty())
 			return matches;
-		final FetchFlags flags=fetchFlags(srchStr);
+		final FetchFlags flags=fetchFlags(srchStr, filter);
 		if(flags==null)
 			return matches;
 
@@ -3506,8 +3591,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					if(I==null)
 						continue;
 					if((I.container()==goodLocation)
-					&&(filter.passesFilter(I))
-					&&(I.ID().equalsIgnoreCase(srchStr)
+					&&(flags.filter.passesFilter(I))
+					&&((srchStr.length()==0)
+					   ||I.ID().equalsIgnoreCase(srchStr)
 					   ||(I.Name().equalsIgnoreCase(srchStr))
 					   ||(I.name().equalsIgnoreCase(srchStr))))
 					{
@@ -3526,8 +3612,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					if(I==null)
 						continue;
 					if((I.container()==goodLocation)
-					&&(filter.passesFilter(I))
-					&&(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr))
+					&&(flags.filter.passesFilter(I))
+					&&((srchStr.length()==0)
+						||(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr)))
 					&&((!allFlag)||((I.displayText()!=null)&&(I.displayText().length()>0))))
 					{
 						if((--myOccurrance)<=0)
@@ -3541,8 +3628,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 						if(I==null)
 							continue;
 						if((I.container()==goodLocation)
-						&&(filter.passesFilter(I))
-						&&(containsString(I.displayText(),srchStr)))
+						&&(flags.filter.passesFilter(I))
+						&&((srchStr.length()==0)
+						   ||(containsString(I.displayText(),srchStr))))
 						{
 							if((--myOccurrance)<=0)
 								matches.addElement(I);
@@ -3562,7 +3650,7 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 	{
 		if(list.isEmpty())
 			return null;
-		final FetchFlags flags=fetchFlags(srchStr);
+		final FetchFlags flags=fetchFlags(srchStr, filter);
 		if(flags==null)
 			return null;
 
@@ -3582,8 +3670,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					{
 						I=(Item)E;
 						if((I.container()==goodLocation)
-						&&(filter.passesFilter(I))
-						&&(I.ID().equalsIgnoreCase(srchStr)
+						&&(flags.filter.passesFilter(I))
+						&&((srchStr.length()==0)
+						   ||(ID().equalsIgnoreCase(srchStr))
 						   ||(I.Name().equalsIgnoreCase(srchStr))
 						   ||(I.name().equalsIgnoreCase(srchStr))))
 						{
@@ -3618,8 +3707,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					{
 						I=(Item)E;
 						if((I.container()==goodLocation)
-						&&(filter.passesFilter(I))
-						&&(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr))
+						&&(flags.filter.passesFilter(I))
+						&&((srchStr.length()==0)
+							||(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr)))
 						&&((!allFlag)||(E instanceof Ability)||((I.displayText()!=null)&&(I.displayText().length()>0))))
 						{
 							if((--myOccurrance)<=0)
@@ -3644,8 +3734,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 						{
 							I=(Item)E;
 							if((I.container()==goodLocation)
-							&&(filter.passesFilter(I))
-							&&(containsString(I.displayText(),srchStr)))
+							&&(flags.filter.passesFilter(I))
+							&&((srchStr.length()==0)
+								||(containsString(I.displayText(),srchStr))))
 							{
 								if((--myOccurrance)<=0)
 									return I;
@@ -3655,7 +3746,8 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 						if(E!=null)
 						{
 							if((containsString(E.displayText(),srchStr))
-							||((E instanceof MOB)&&containsString(((MOB)E).genericName(),srchStr)))
+							||((E instanceof MOB)
+								&& containsString(((MOB)E).genericName(),srchStr)))
 							{
 								if((--myOccurrance)<=0)
 									return E;
@@ -3677,7 +3769,7 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 	{
 		if(list.isEmpty())
 			return null;
-		final FetchFlags flags=fetchFlags(srchStr);
+		final FetchFlags flags=fetchFlags(srchStr, filter);
 		if(flags==null)
 			return null;
 
@@ -3697,10 +3789,11 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					{
 						I=(Item)E;
 						if((I.container()==goodLocation)
-						&&(filter.passesFilter(I))
-						&&(I.ID().equalsIgnoreCase(srchStr)
-						   ||(I.Name().equalsIgnoreCase(srchStr))
-						   ||(I.name().equalsIgnoreCase(srchStr))))
+						&&(flags.filter.passesFilter(I))
+						&&((srchStr.length()==0)
+							||(I.ID().equalsIgnoreCase(srchStr)
+							||(I.Name().equalsIgnoreCase(srchStr))
+							||(I.name().equalsIgnoreCase(srchStr)))))
 						{
 							if((!allFlag)||(E instanceof Ability)||((I.displayText()!=null)&&(I.displayText().length()>0)))
 							{
@@ -3735,8 +3828,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 					{
 						I=(Item)E;
 						if((I.container()==goodLocation)
-						&&(filter.passesFilter(I))
-						&&(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr))
+						&&(flags.filter.passesFilter(I))
+						&&((srchStr.length()==0)
+							||(containsString(I.name(),srchStr)||containsString(I.Name(),srchStr)))
 						&&((!allFlag)||(E instanceof Ability)||((I.displayText()!=null)&&(I.displayText().length()>0))))
 						{
 							if((--myOccurrance)<=0)
@@ -3761,8 +3855,9 @@ public class EnglishParser extends StdLibrary implements EnglishParsing
 						{
 							I=(Item)E;
 							if((I.container()==goodLocation)
-							&&(filter.passesFilter(I))
-							&&(containsString(I.displayText(),srchStr)))
+							&&(flags.filter.passesFilter(I))
+							&&((srchStr.length()==0)
+								||(containsString(I.displayText(),srchStr))))
 							{
 								if((--myOccurrance)<=0)
 									return I;
