@@ -30,6 +30,7 @@
  28. Prop_ItemNoRuin can now be used to Always ruin an item.
  29. Class Skills, including All Qualifys, now support expertises as requirements.
  30. New Command "AutoAttack" for toggling auto attack.   Also available in Config.
+ 31. Players can now drop, get, etc all weapons, armor, items, or money.
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
